# eigar

./: CMakeLists.txt  README.md  build.cmake  tests.cmake
.github/workflows/: push_build.yml
docs/linux/: memory.md
docs/win32/: memory.md
include/shared/: eigar.h
src/os/linux/: eigar_memory.c
tests/memory/: test_total_physical.c
